[package]
name = "lumi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", default-features = false }


[dependencies.serenity]
default-features = false
features = ["builder", "gateway", "model", "utils", "collector", "framework", "cache", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"